- fixed profile bio formattting and overflow - added pre class to honor all line breaks in project/opp descriptions and update text

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -9,6 +9,9 @@ h1, h2, h3, h4, h5 {
 h5 {
     color: #888888;
 }
+.pre {
+    white-space: pre-wrap;
+}
 .container {
     
 }
